sample/LoadBalancer.yml
# see https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/service/nlb/
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: tenant1
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/service/annotations/
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: sample-service
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: Name=sample-service
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-058c6d2c63ef6dbd7,subnet-029d9418d5be4ad2b,subnet-0f4fdef51814b866a
  labels:
    app: sample-app-service
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: sample-app
  type: LoadBalancer
