sample/Ingress.yml
# see https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/examples/echo_server/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: tenant1
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: sample-ingress
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-058c6d2c63ef6dbd7,subnet-029d9418d5be4ad2b,subnet-0f4fdef51814b866a
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: app=sample-app
  labels:
    app: sample-app-ingress
spec:
  rules:
  - host: echoserver.example.com
    http:
    paths:
